updated notebook and readme notebooks_2

--- a/notebooks/2_modeling_of_covariates_and_GWAS_analysis/5_GWAS_to_celltype_results_visualization.ipynb
+++ b/notebooks/2_modeling_of_covariates_and_GWAS_analysis/5_GWAS_to_celltype_results_visualization.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Visualization of results of linking GWAS variants to HLCA cell types."
+    "# Visualization of results of linking GWAS variants to HLCA cell types (Figure 5d, Extended Data Figure 13)."
    ]
   },
   {
