--- a/notebooks/2_downstream_analysis_of_HLCA_core/2_covariate_effect_gene_level_modeling_preparation.ipynb
+++ b/notebooks/2_downstream_analysis_of_HLCA_core/2_covariate_effect_gene_level_modeling_preparation.ipynb
@@ -216,12 +216,12 @@
    "source": [
     "donor_ct_overview = (\n",
     "    adata.obs.groupby([\"manual_ann_grouped\", \"subject_ID\"])\n",
-    "    .agg({\"manual_ann_grouped\": \"count\", \"BMI\": \"nunique\", \"ethnicity\": \"nunique\"})\n",
+    "    .agg({\"manual_ann_grouped\": \"count\", \"BMI\": \"nunique\", \"ancestry\": \"nunique\"})\n",
     "    .rename(columns={\"manual_ann_grouped\": \"n_cells\"})\n",
     ")\n",
-    "donor_ct_overview[\"BMI_and_ethnicity\"] = [\n",
+    "donor_ct_overview[\"BMI_and_ancestry\"] = [\n",
     "    bmi == 1 and eth == 1\n",
-    "    for bmi, eth in zip(donor_ct_overview[\"BMI\"], donor_ct_overview[\"ethnicity\"])\n",
+    "    for bmi, eth in zip(donor_ct_overview[\"BMI\"], donor_ct_overview[\"ancestry\"])\n",
     "]\n",
     "# keep only those rows where the cell count is greater than min_n_cells\n",
     "donor_ct_overview = donor_ct_overview.loc[\n",
@@ -242,8 +242,8 @@
     "        \"n_cells\": \"sum\",\n",
     "        \"subject_ID\": \"nunique\",\n",
     "        \"BMI\": \"sum\",\n",
-    "        \"ethnicity\": \"sum\",\n",
-    "        \"BMI_and_ethnicity\": \"sum\",\n",
+    "        \"ancestry\": \"sum\",\n",
+    "        \"BMI_and_ancestry\": \"sum\",\n",
     "    }\n",
     ")"
    ]
@@ -402,7 +402,7 @@
     }
    ],
    "source": [
-    "ct_overview.sort_values(by=\"BMI_and_ethnicity\", ascending=False).head(10)"
+    "ct_overview.sort_values(by=\"BMI_and_ancestry\", ascending=False).head(10)"
    ]
   },
   {
@@ -5398,7 +5398,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -5412,7 +5412,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
