--- a/notebooks/2_downstream_analysis_of_HLCA_core/8_batch_effect_related_genes.ipynb
+++ b/notebooks/2_downstream_analysis_of_HLCA_core/8_batch_effect_related_genes.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "300c16ce-c0b2-4152-8d9f-4236c3d16d4b",
+   "metadata": {},
+   "source": [
+    "Here we identify genes that are consistently differentially expressed in specific datasets, i.e. genes of which the expression is often batch-dependent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7ea8582d-a386-4567-a91a-8ba98a62814a",
    "metadata": {},
    "source": [
