--- a/notebooks/2_downstream_analysis_of_HLCA_core/5_GWAS_to_celltype_prep_DEA.ipynb
+++ b/notebooks/2_downstream_analysis_of_HLCA_core/5_GWAS_to_celltype_prep_DEA.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here we do the differential expression analysis per (coarse) cell type, which will be used as the basis for the scLDSC analysis to stratify GWAS results by cell type."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import modules"
    ]
   },
@@ -179,7 +186,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -193,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.5"
+   "version": "3.7.13"
   }
  },
  "nbformat": 4,
