--- a/notebooks/3_atlas_extension/11_gene_name_harmonisation.ipynb
+++ b/notebooks/3_atlas_extension/11_gene_name_harmonisation.ipynb
@@ -1,11 +1,52 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f0a953fc-cc27-4a89-b264-153f2f7cad0e",
    "metadata": {},
    "source": [
-    "# HLCA Datasets"
+    "# HLCA Datasets gene harmonisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99ed9877",
+   "metadata": {},
+   "source": [
+    "This notebook is in charge of using idtrack for the gene harmonisation of the HLCA."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "df897a4b",
+   "metadata": {},
+   "source": [
+    "__author__ = \"Kemal Inecik, Ciro Ramírez-Suástegui\"\n",
+    "\n",
+    "__maintainer__ = \"Lisa Sikkema, Ciro Ramírez-Suástegui\"\n",
+    "\n",
+    "__email__ = \"lisa.sikkema@helmholtz-muenchen.de, ciro.rsuastegui@helmholtz-munich.de\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "607ec207",
+   "metadata": {},
+   "source": [
+    "### Import"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f022a79",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Pre-processing\n",
+    "### Main\n",
+    "### Conclusions"
    ]
   },
   {
@@ -42,6 +83,14 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "824d145a",
+   "metadata": {},
+   "source": [
+    "### Load data"
    ]
   },
   {
@@ -2956,6 +3005,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "74f831c0",
+   "metadata": {},
+   "source": [
+    "### Save"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "516adee1-8c4f-4892-836c-4c07aed34b24",
@@ -3000,7 +3057,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
