--- a/notebooks/3_atlas_extension/11_gene_name_harmonisation.ipynb
+++ b/notebooks/3_atlas_extension/11_gene_name_harmonisation.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "f0a953fc-cc27-4a89-b264-153f2f7cad0e",
    "metadata": {},
@@ -39,39 +38,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1f022a79",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Pre-processing\n",
-    "### Main\n",
-    "### Conclusions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "44b3f875-10f3-4301-b9e0-b64f25b12dce",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sys\n",
-    "sys.path.append(\"../..\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "fbc5ad8e-5349-4e46-83c3-c9ab16db3052",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import time\n",
-    "import scanpy as sc\n",
-    "import idtrack\n",
     "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bf18bd88-2818-4c77-b893-52cc72f79b97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scanpy as sc\n",
+    "import idtrack"
    ]
   },
   {
@@ -3043,9 +3028,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python [conda env:hlcav2_scarches_gpu]",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-hlcav2_scarches_gpu-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3057,7 +3042,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
